# argus

./: .env.release.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  RENAMING.md  SECURITY.md  TODOS.md  conductor.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: triage-feedback.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
argus/: .gitignore  README.md  context.yaml
argus/athena/argus_analytics/: landing_logs.md  releases_logs.md
design/: preview.html
docs/: release-setup.md
docs/context-folder-example/: README.md  context.yaml
docs/context-folder-example/ai/: glossary.md  overview.md
openspec/: ROADMAP-DYNAMO.md  ROADMAP.md
openspec/changes/add-ai-chat-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-ai-providers/: design.md  proposal.md  tasks.md
openspec/changes/add-athena-connection/: tasks.md
openspec/changes/add-changelog/: design.md  proposal.md  tasks.md
openspec/changes/add-ci-pr-gate/: tasks.md
scripts/: build-download-manifest.mjs  build-manifest.mjs  bump-version.mjs  release-local.sh
scripts/__tests__/: build-download-manifest.smoke.mjs  build-manifest.smoke.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0005_connection_context.sql  0006_ai_settings.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/activity_log/: mod.rs
src-tauri/src/modules/ai/: anthropic_api.rs  claude_cli.rs  cli_detect.rs  codex_cli.rs  commands.rs  keys.rs  mod.rs  openai_api.rs  path_fix.rs  provider.rs  types.rs
src-tauri/src/modules/athena/: client.rs  commands.rs  mod.rs  pool.rs  schema_commands.rs
src-tauri/src/modules/context/: ai.rs  commands.rs  engine.rs  introspect_adapters.rs  mod.rs  parser.rs  sync.rs  types.rs  write.rs
src-tauri/src/modules/dynamo/: commands.rs  edit.rs  errors.rs  items.rs  mod.rs  params.rs
src-tauri/src/modules/dynamo/tables/: commands.rs  describe.rs  list.rs  mod.rs
src-tauri/src/modules/mssql/: binding.rs  cancel.rs  columns.rs  commands.rs  data.rs  edit.rs  errors.rs  params.rs  pool.rs  schema_commands.rs  sql.rs  structure.rs  tls.rs  url.rs
src-tauri/src/modules/mysql/: binding.rs  columns.rs  commands.rs  edit.rs  errors.rs  params.rs  pool.rs  schema_commands.rs  sql.rs  tls.rs  url.rs
src-tauri/src/modules/postgres/: binding.rs  columns.rs  commands.rs  data.rs  ddl.rs  edit.rs  mod.rs  params.rs  pool.rs  schema.rs  schema_commands.rs  schema_types.rs  sql.rs  tls.rs  url.rs
src-tauri/src/modules/query_history/: mod.rs
src-tauri/src/modules/saved_queries/: mod.rs
src-tauri/src/platform/: connection_groups.rs  connections.rs  mod.rs  secrets.rs  settings.rs  storage.rs
src-tauri/src/platform/updater/: commands.rs  mod.rs
src-tauri/tests/fixtures/claude_stream_json/: tool_use_sequence.jsonl
src/app/: App.tsx
src/styles/: global.css
(+1149 files in other folders)
