[package]
name = "argus"
version = "0.1.6"
description = "Argus desktop"
authors = ["Argus contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "argus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
rustls-pki-types = "1"
url = "2"
percent-encoding = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
async-trait = "0.1"
aws-sdk-dynamodb = "1.111.0"
aws-sdk-sts = "1.103.0"
aws-config = "1.8.16"
# Transitive dep, pinned explicitly so we can pattern-match on SdkError variants.
aws-smithy-runtime-api = "1.12.0"

[features]
# disabled in tests so we can avoid hitting the OS keychain
keychain = []
# Live Postgres tests — opt-in, requires a reachable server (PG_TEST_URL env var).
live-pg-tests = []

[dev-dependencies]
tempfile = "3"
# Pinned to the exact transitive dep version; required for constructing
# ErrorMetadata test fixtures in dynamo/client.rs §5.5.
aws-smithy-types = "1.4.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
